#68 Remove old config menu & other fixes  - Remove old config in html & the Config Controller that is responsible for filling the old menu  - Put submenu in front of searchbar if they are overlapping  - Reduce the size of the "Higher/Lower is better" buttons

--- a/varicity/public/styles/sidebar.css
+++ b/varicity/public/styles/sidebar.css
@@ -22,6 +22,7 @@
 
 #submenu {
     display: none;
+    z-index: 1;
 }
 
 .btn-toggle {
